--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class=spacer id="home">
-        empty space here
+
     </div>
 
     <header class="grid">
@@ -47,12 +47,13 @@
         </div>
 
         <div class="welcome">
-            <h2>Welcome</h2>
-            <p>My name is Katariina</p>
-            <p> I have some interesting projects below </p>
+            <h1>My name is Katariina</h1>
+            <p>Fullstack Developer.</p>
+            <p> Check out my interesting projects below.
+            </p>
         </div>
 
-
+        <!-- have not found use for having a photo here -->
 
         <img id="photo1"
             src="https://fastly.picsum.photos/id/524/700/400.jpg?hmac=UJrhY5oEUSXlPy6wysLh2EzE2iQ414pOQDnfWrbjsbk"
@@ -60,67 +61,84 @@
 
 
 
-        <h3 id="project">Projects</h3>
+        <h3 id="project">Project Gallery</h3>
+
+        <!-- PROJECT PIANO -->
         <div class="desc">
             <h4>Description</h4>
             <p>Using: Javascript, CSS, HTML. <br> <br>
                 The keyboard is both mouseclick and keyboard interactive. You may also
                 change the design of the piano.
             </p>
+            </p>
         </div>
-
         <div class="proj">
+
             <a href="https://perunaliang.github.io/piano/" target="_blank">
                 <h4>Project</h4>
-                <img src="images/project1a.jpg" alt="">
-            </a>
-        </div>
-
-        <div class="desc">
-            <h4>Proj 2 desc</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste id voluptate est quis voluptatibus
-                quisquam, nostrum voluptates rem inventore illum</p>
-        </div>
-        <div class="proj">
-
-            <a href="https://perunaliang.github.io/piano/" target="_blank">
-                <h4>Proj 2 link</h4>
                 <div class="pop">
                 </div>
             </a>
         </div>
 
+        <!-- PROJECT YF -->
         <div class="desc">
-            <h4>Title</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste id voluptate est quis voluptatibus
-                quisquam, nostrum voluptates rem inventore illum, velit quibusdam sequi iusto consequatur, deserunt
-                repellat hic recusandae. Aliquam?
+            <h4>Description</h4>
+            <p>Using: Python and fastAPI. <br> <br>
+                Gets you a graph of stocks data from yahoo finance.
+            </p>
+        </div>
+
+        <div class="proj">
+            <a href="" target="_blank">
+                <h4>Project</h4>
+                <img src="" alt="">
+                <iframe src="http://127.0.0.1:8000/" frameborder="10" height="500px" width="330vh"></iframe>
+            </a>
+        </div>
+
+
+        <!-- PROJECT INVENTORY -->
+
+        <div class="desc">
+            <h4>Inventory app</h4>
+            <p> Using: Python and MySQL.
+                <br> <br>
+                A terminal based app that allows you to view, add, delete, update and get reports of your current
+                groceries inventory
+
+        </div>
+
+        <div class="proj">
+
+            <iframe src="https://replit.com/@PTK/groceriesinventory?embed=true" frameborder="10" height="500px"
+                width="300vh"></iframe>
+
+            <!-- <a href="" target="_blank">
+                <h4>Project</h4>
+            </a> -->
+        </div>
+
+
+        <div class="desc">
+            <h4>Description</h4>
+            <p>Using: CSS and HTML
+                <br> <br>
+                Project coming soon!
 
 
         </div>
 
         <div class="proj">
-            <h4>Title</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste id voluptate est quis voluptatibus
-                quisquam, nostrum voluptates rem inventore illum, velit quibusdam sequi iusto consequatur, deserunt
-                repellat hic recusandae. Aliquam?</p>
-        </div>
 
 
-        <div class="desc">
-            <h4>Title</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste id voluptate est quis voluptatibus
-                quisquam, nostrum voluptates rem inventore illum, velit quibusdam sequi iusto consequatur, deserunt
-                repellat hic recusandae. Aliquam?
+            <a href="https://perunaliang.github.io/piano/" target="_blank">
+                <h4>Project</h4>
+                <!-- <div class="pop"></div> -->
 
 
-        </div>
+            </a>
 
-        <div class="proj">
-            <h4>Title</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste id voluptate est quis voluptatibus
-                quisquam, nostrum voluptates rem inventore illum, velit quibusdam sequi iusto consequatur, deserunt
-                repellat hic recusandae. Aliquam?</p>
         </div>
 
 
@@ -132,7 +150,7 @@
         <div class="box2">
             <span>
                 <h2>Get in touch</h2>
-                Email:
+                Email: katariinaliang@yahoo.com
             </span>
         </div>
     </footer>
