--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h4>Description</h4>
             <p>Using: CSS and HTML
                 <br> <br>
-                Project coming soon!
+                A fun little project playing with animation.
 
 
         </div>
@@ -132,14 +132,16 @@
         <div class="proj">
 
 
-            <a href="https://perunaliang.github.io/piano/" target="_blank">
+            <a href="https://perunaliang.github.io/nyan/" target="_blank">
                 <h4>Project</h4>
-                <!-- <div class="pop"></div> -->
+                <div class="pop2"></div>
 
 
             </a>
 
         </div>
+
+
 
 
 
