--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="desc">
             <h4>Description</h4>
             <p>Using: Python and fastAPI. <br> <br>
-                Gets you a graph of stocks data from yahoo finance.
+                This app gives you a line graph of stocks data from yahoo finance.
             </p>
         </div>
 
