--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             <a href="" target="_blank">
                 <h4>Project</h4>
                 <img src="" alt="">
-                <iframe src="http://127.0.0.1:8000/" frameborder="10" height="500px" width="330vh"></iframe>
+                <iframe src="https://stonk-t36ehykf6a-nw.a.run.app/" frameborder="10" height="500px"
+                    width="330vh"></iframe>
             </a>
         </div>
 
